--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/wallet-adapter-base": "^0.5.2",
+    "@solana/wallet-adapter-react": "^0.9.2",
+    "@solana/wallet-adapter-react-ui": "^0.1.1",
+    "@solana/wallet-adapter-wallets": "^0.7.6",
+    "@solana/web3.js": "^1.24.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/mz": "^2.7.4",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/styled-components": "^5.1.14",
+    "borsh": "^0.6.0",
+    "grommet": "^2.17.5",
+    "mobx": "^6.3.2",
+    "mobx-state-tree": "^5.0.2",
+    "mz": "^2.7.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "4.2.0",
+    "react-is": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "ts-node": "^10.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -20,7 +41,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "init:token": "ts-node ./src/cli/init.ts"
   },
   "eslintConfig": {
     "extends": [
